# cpp_course

./: .gitignore  README.md  how_to_submit_hw.md
exams/: fall_program.md  fall_rules.md  spring_program.md
lectures/: README.md  lecture_01.md  lecture_02.md  lecture_03.md  lecture_04.md  lecture_05.md  lecture_06.md  lecture_07.md  lecture_08.md  lecture_09.md  lecture_10.md  lecture_11.md
programs/: fall.md  spring.md
sems/: README.md  seminar_01.md  seminar_02.md  seminar_03.md  seminar_04.md  seminar_05.md  seminar_06.md  seminar_08.md  seminar_09.md
sems/spring/: seminar_02.md  seminar_03.md  seminar_04.md
task_draft/: CMakeLists.txt  clang-format  clang-tidy  test.sh
